--- a/index.html
+++ b/index.html
@@ -1,50 +1,50 @@
 ---
 layout: home
-lang: en
-title: SynerGen-AI - Open Source Generative AI Organization
+lang: cn
+title: SynerGen-AI - 开源生成式AI组织
 hero:
-  title: "Advancing Generative AI Through Open Collaboration"
-  subtitle: "SynerGen-AI is a cutting-edge open-source organization dedicated to pushing the boundaries of generative artificial intelligence. We foster innovation, collaboration, and knowledge sharing in the AI community."
+  title: "通过开放协作推进生成式AI发展"
+  subtitle: "SynerGen-AI是一个前沿的开源组织，致力于推动生成式人工智能的边界。我们在AI社区中促进创新、协作和知识共享。我们关注的重点是大模型，Ai Agent，图像与视频生成式模型，目前我们正在\n  打造全流程视频生成平台，帮助用户在AI协助下生成高可用的视频内容。"
   actions:
-    - text: "Explore Projects"
+    - text: "探索项目"
       url: "/projects/"
       style: "primary"
-    - text: "Join Our Community"
+    - text: "加入我们"
       url: "/contact/"
       style: "secondary"
 
 features:
-  title: "What We Do"
+  title: "我们的工作"
   items:
     - icon: "fas fa-brain"
-      title: "Research & Development"
-      description: "We conduct cutting-edge research in generative AI, exploring new architectures, training methods, and applications that push the field forward."
+      title: "研究与开发"
+      description: "我们在生成式AI领域进行前沿研究，探索新的架构、训练方法和应用，推动领域发展。"
     - icon: "fas fa-code"
-      title: "Open Source Tools"
-      description: "We develop and maintain open-source libraries, frameworks, and tools that make generative AI more accessible to researchers and developers worldwide."
+      title: "开源工具"
+      description: "我们开发和维护开源库、框架和工具，让全世界的研究人员和开发者更容易使用生成式AI。"
     - icon: "fas fa-users"
-      title: "Community Building"
-      description: "We foster a vibrant community of AI researchers, developers, and enthusiasts who collaborate on projects and share knowledge."
+      title: "社区建设"
+      description: "我们培育一个充满活力的AI研究人员、开发者和爱好者社区，他们在项目上协作并分享知识。"
     - icon: "fas fa-graduation-cap"
-      title: "Education & Outreach"
-      description: "We provide educational resources, tutorials, and workshops to help others learn about and contribute to generative AI research."
+      title: "教育与推广"
+      description: "我们提供教育资源、教程和研讨会，帮助他人学习生成式AI研究并为其做出贡献。"
 
 recent_projects:
-  title: "Featured Projects"
-  view_all: "View All Projects →"
+  title: "精选项目"
+  view_all: "查看所有项目 →"
 
 team_preview:
-  title: "Meet Our Team"
-  view_all: "View All Members →"
+  title: "认识我们的团队"
+  view_all: "查看所有成员 →"
 
 cta:
-  title: "Ready to Shape the Future of AI?"
-  description: "Join our community of researchers, developers, and innovators working together to advance generative AI technology."
+  title: "准备好塑造AI的未来了吗？"
+  description: "加入我们的研究人员、开发者和创新者社区，共同推进生成式AI技术的发展。"
   actions:
-    - text: "Get Involved"
+    - text: "参与其中"
       url: "/contact/"
       style: "primary"
-    - text: "View on GitHub"
+    - text: "在GitHub上查看"
       url: "https://github.com/SynerGen-AI"
       style: "secondary"
 ---
