update real time api cache

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ lang: cn
 title: SynerGen-AI - 开源生成式AI组织
 hero:
   title: "通过开放协作推进生成式AI发展"
-  subtitle: "SynerGen-AI是一个前沿的开源组织，致力于推动生成式人工智能的边界。我们在AI社区中促进创新、协作和知识共享。我们关注的重点是大模型，Ai Agent，图像与视频生成式模型，目前我们正在\n  打造全流程视频生成平台，帮助用户在AI协助下生成高可用的视频内容。"
+  subtitle: "SynerGen-AI是一个前沿的开源组织，致力于推动生成式人工智能的边界。我们在AI社区中促进创新、协作和知识共享。我们关注的重点是大模型，AI Agent，图像与视频生成式模型，目前我们正在打造全流程视频生成平台，帮助用户在AI协助下生成高可用的视频内容。"
   actions:
     - text: "探索项目"
       url: "/projects/"
@@ -32,10 +32,6 @@ features:
 recent_projects:
   title: "精选项目"
   view_all: "查看所有项目 →"
-
-team_preview:
-  title: "认识我们的团队"
-  view_all: "查看所有成员 →"
 
 cta:
   title: "准备好塑造AI的未来了吗？"
