add video and image display pages

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@ recent_projects:
   title: "精选项目"
   view_all: "查看所有项目 →"
 
+<!-- display_works: -->
+
 cta:
   title: "准备好塑造AI的未来了吗？"
   description: "加入我们的研究人员、开发者和创新者社区，共同推进生成式AI技术的发展。"
