--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@ hero:
     - text: "探索项目"
       url: "/projects/"
       style: "primary"
-    - text: "加入我们"
+    - text: "探索AI作品"
+      url: "/videos/"
+      style: "secondary"
+    - text: "联系我们"
       url: "/contact/"
       style: "secondary"
 
@@ -33,7 +36,17 @@ recent_projects:
   title: "精选项目"
   view_all: "查看所有项目 →"
 
-<!-- display_works: -->
+recent_images:
+  title: "精选图片"
+  view_all: "查看所有图片 →"
+
+recent_videos:
+  title: "精选视频"
+  view_all: "查看所有视频 →"
+
+team_preview:
+  title: "团队成员"
+  view_all: "查看所有成员 →"
 
 cta:
   title: "准备好塑造AI的未来了吗？"
